[gd_scene format=3 uid="uid://b035td654d8fn"]

[ext_resource type="Script" uid="uid://cnn004a8iu2e0" path="res://mini_checklist.gd" id="1_t10jc"]
[ext_resource type="Shader" path="res://outline.gdshader" id="2_jppvq"]
[ext_resource type="Script" uid="uid://8pnn8yjswavy" path="res://true_checklist.gd" id="2_sgols"]
[ext_resource type="PackedScene" uid="uid://cat7bh3g2lwh0" path="res://checkbox.tscn" id="3_jppvq"]
[ext_resource type="PackedScene" uid="uid://c01xneve2v2sv" path="res://Buttons/button.tscn" id="4_wwp3p"]
[ext_resource type="Script" uid="uid://bu7q0mtovaebe" path="res://Buttons/back.gd" id="5_sgols"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wwp3p"]
shader = ExtResource("2_jppvq")
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 0.0
shader_parameter/outline_color = Color(1, 0.7200002, 0, 1)

[sub_resource type="Gradient" id="Gradient_aqk2v"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.5856639, 0.39514944, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_036b0"]
gradient = SubResource("Gradient_aqk2v")
width = 100
height = 100

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkg7o"]
size = Vector2(99.99991, 100.00003)

[sub_resource type="Gradient" id="Gradient_036b0"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 0.8156863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dwbse"]
gradient = SubResource("Gradient_036b0")
width = 420
height = 594

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgols"]
size = Vector2(420, 594)

[node name="Checklist" type="Node2D" unique_id=560789416]

[node name="Mini_Checklist" type="Node2D" parent="." unique_id=102571448]
script = ExtResource("1_t10jc")

[node name="Sprite_Checklist" type="Sprite2D" parent="Mini_Checklist" unique_id=1618002132]
material = SubResource("ShaderMaterial_wwp3p")
position = Vector2(892, 371)
scale = Vector2(0.9200004, 1)
texture = SubResource("GradientTexture2D_036b0")

[node name="Area_Checklist" type="Area2D" parent="Mini_Checklist/Sprite_Checklist" unique_id=1036721997]

[node name="CollisionShape_Checklist" type="CollisionShape2D" parent="Mini_Checklist/Sprite_Checklist/Area_Checklist" unique_id=934034891]
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_pkg7o")

[node name="True_Checklist" type="Node2D" parent="." unique_id=1283458076]
z_index = 50
script = ExtResource("2_sgols")

[node name="Checklist" type="Sprite2D" parent="True_Checklist" unique_id=173666421]
position = Vector2(600, 360)
texture = SubResource("GradientTexture2D_dwbse")

[node name="Area2D" type="Area2D" parent="True_Checklist/Checklist" unique_id=551689020]

[node name="CollisionShape2D" type="CollisionShape2D" parent="True_Checklist/Checklist/Area2D" unique_id=584239631]
shape = SubResource("RectangleShape2D_sgols")

[node name="Checkbox1" parent="True_Checklist" unique_id=2123857673 instance=ExtResource("3_jppvq")]
position = Vector2(752, 615)
scale = Vector2(1.7, 1.7)

[node name="Checkbox2" parent="True_Checklist" unique_id=548258273 instance=ExtResource("3_jppvq")]
position = Vector2(682, 615)
scale = Vector2(1.7, 1.7)

[node name="Checkbox3" parent="True_Checklist" unique_id=1635790512 instance=ExtResource("3_jppvq")]
position = Vector2(752, 545)
scale = Vector2(1.7, 1.7)

[node name="Checkbox4" parent="True_Checklist" unique_id=1746886143 instance=ExtResource("3_jppvq")]
position = Vector2(682, 545)
scale = Vector2(1.7, 1.7)

[node name="Checkbox5" parent="True_Checklist" unique_id=1476505437 instance=ExtResource("3_jppvq")]
position = Vector2(752, 475)
scale = Vector2(1.7, 1.7)

[node name="Checkbox6" parent="True_Checklist" unique_id=1282286409 instance=ExtResource("3_jppvq")]
position = Vector2(682, 475)
scale = Vector2(1.7, 1.7)

[node name="Checkbox7" parent="True_Checklist" unique_id=1338197841 instance=ExtResource("3_jppvq")]
position = Vector2(752, 405)
scale = Vector2(1.7, 1.7)

[node name="Checkbox8" parent="True_Checklist" unique_id=1301419221 instance=ExtResource("3_jppvq")]
position = Vector2(682, 405)
scale = Vector2(1.7, 1.7)

[node name="Checkbox9" parent="True_Checklist" unique_id=529142675 instance=ExtResource("3_jppvq")]
position = Vector2(752, 335)
scale = Vector2(1.7, 1.7)

[node name="Checkbox10" parent="True_Checklist" unique_id=644419231 instance=ExtResource("3_jppvq")]
position = Vector2(682, 335)
scale = Vector2(1.7, 1.7)

[node name="Checkbox11" parent="True_Checklist" unique_id=1264897094 instance=ExtResource("3_jppvq")]
position = Vector2(752, 265)
scale = Vector2(1.7, 1.7)

[node name="Checkbox12" parent="True_Checklist" unique_id=402452828 instance=ExtResource("3_jppvq")]
position = Vector2(682, 265)
scale = Vector2(1.7, 1.7)

[node name="Back" parent="True_Checklist" unique_id=1448350442 instance=ExtResource("4_wwp3p")]
position = Vector2(780, 93)
scale = Vector2(0.4, 0.4)
script = ExtResource("5_sgols")

[connection signal="mouse_entered" from="Mini_Checklist/Sprite_Checklist/Area_Checklist" to="Mini_Checklist" method="_on_area_checklist_mouse_entered"]
[connection signal="mouse_exited" from="Mini_Checklist/Sprite_Checklist/Area_Checklist" to="Mini_Checklist" method="_on_area_checklist_mouse_exited"]
[connection signal="mouse_entered" from="True_Checklist/Checklist/Area2D" to="True_Checklist" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="True_Checklist/Checklist/Area2D" to="True_Checklist" method="_on_area_2d_mouse_exited"]
